--- a/css/MMM-ShowHideModules.css
+++ b/css/MMM-ShowHideModules.css
@@ -1,9 +1,11 @@
-div {
+div.MMM-ShowHideModules {
   text-align: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
-span {
+div.MMM-ShowHideModules span {
   margin-right: 15px;
 }
-span.bright {
+div.MMM-ShowHideModules span.bright {
   border-bottom: 1px solid var(--color-text-dimmed);
 }
